--- a/views/questionPage.pug
+++ b/views/questionPage.pug
@@ -6,6 +6,11 @@ html(lang='en')
     style
       include ../public/css/home.css
       include ../public/css/questionPage.css
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/styles/hopscotch.min.css")
+    link(rel="stylesheet", href="https://cdn.quilljs.com/1.3.6/quill.snow.css")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/highlight.min.js")
+    script(src="https://cdn.quilljs.com/1.3.6/quill.js")
+    script(src="https://cdn.quilljs.com/1.3.6/quill.min.js")
   body
     include titleBar
     include menuBar
