--- a/public/css/questionPage.css
+++ b/public/css/questionPage.css
@@ -7,6 +7,9 @@
 }
 .sidebar {
   margin: 1vh 6vw 1vh 1vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .tickmark > img {
   cursor: pointer;
