--- a/views/postAnswer.pug
+++ b/views/postAnswer.pug
@@ -1,9 +1,11 @@
 style
   include ../public/css/postAnswer.css
+script(src="/js/editor.js")
 div(class="post-answer")
   span Post Your Answer
-  form(action=`/postAnswer/${questionDetails.id}` method="POST" onSubmit=`return checkForm(${userId}, this)`)
-    textarea(name="answer", cols="30", rows="10" placeholder="Enter answer..." minlength='20' required)
+  div(class='editor-box')
+    div(id='toolbar')
+    div(id='editor')
     div(id="formFooter")
-      button Post Answer
+      button(onclick=`postAnswer(${userId},'${questionDetails.id}')`) Post Answer
       div(class="popUp hide") *please Login before submit
