--- a/views/postQuestion.pug
+++ b/views/postQuestion.pug
@@ -4,17 +4,25 @@ html
     style
       include ../public/css/home.css
       include ../public/css/askQuestion.css
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/styles/hopscotch.min.css")
+    link(rel="stylesheet", href="https://cdn.quilljs.com/1.3.6/quill.snow.css")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/highlight.min.js")
+    script(src="https://cdn.quilljs.com/1.3.6/quill.js")
+    script(src="https://cdn.quilljs.com/1.3.6/quill.min.js")
+    script(src="/js/editor.js")
+    script(src="/js/postQuestion.js")
   body
     include titleBar
     div(id="container")
-      p Post Your Question
-      form(action="/postQuestion" method="POST")
+      p(class="pageHeading") Post Your Question
+      div(id='error' class='blind') Please explain in brief
+      div(class='editor-box')
         label Title :
-        input(type="text" name="title" placeholder="Enter title ..." required autofocus)
+        input(type="text" name="title" placeholder="Enter title ..." autofocus)
         label Body :
-        textarea(name="body", cols="30", rows="10" placeholder="Enter content...")
+        div(id='editor')
         label Tags :
         input(type="text" name="tags" placeholder="Enter tags ...")
         div(id="formFooter")
-          button Submit
+          button(onclick='postQuestion(this)') Submit
           a(href="/home" id="cancelButton") Cancel
