|#5|Santhosh/Satheesh| added authors of each question in home page

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -260,6 +260,17 @@ body {
   border-left-color: #00a8cc;
 }
 
+.q-author {
+  font-weight: 400;
+  padding-bottom: 1vh;
+  text-align: right;
+  color: #f48024;
+}
+
+.q-author-name:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
 .ansCount {
   font-size: small;
 }
