--- a/views/questionPage.pug
+++ b/views/questionPage.pug
@@ -11,6 +11,7 @@ html(lang='en')
     script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/highlight.min.js")
     script(src="https://cdn.quilljs.com/1.3.6/quill.js")
     script(src="https://cdn.quilljs.com/1.3.6/quill.min.js")
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
   body
     include titleBar
     include menuBar
@@ -48,9 +49,10 @@ html(lang='en')
             div(class="comment" id=`${comment.id}`)=comment.comment
             div(class="flex-row")
               div(class="c-btns")
-                div(class="edit-btn" onclick=`makeCommentEditable(this,'${comment.id}')`) edit
-                div(class="cancel-btn hide" onclick=`makeCommentUneditable(this,'${comment.id}')`) cancel
-                div(class="save-btn hide" onclick=`saveComment(this, '${comment.id}')`) save
+                if(comment.ownerId == `u${userId}`)
+                  div(class="edit-btn" onclick=`makeCommentEditable(this,'${comment.id}')`) edit
+                  div(class="cancel-btn hide" onclick=`makeCommentUneditable(this,'${comment.id}')`) cancel
+                  div(class="save-btn hide" onclick=`saveComment(this, '${comment.id}')`) save
               div(class="c-author")
                 span(onclick=`window.location.href='/viewProfile?id=${comment.ownerId.slice(1)}'`)=comment.username
                 span=`, ${comment.receivedAt}`
