--- a/views/questionPage.pug
+++ b/views/questionPage.pug
@@ -26,7 +26,7 @@ html(lang='en')
             div(class="question-title-h")=title
             div(class="question-title-b")
               div(class="avatar-div")
-                img(class="avatar author-avatar" src=`${avatar}`, alt="alt" onClick=`window.location.href='/viewProfile?id=${id.slice(1)}'`)
+                img(class="author-avatar" src=`${avatar}`, alt="alt" onClick=`window.location.href='/viewProfile?id=${id.slice(1)}'`)
               div
                 div(class="author")=username
                 div(class="time") one minute ago
