|#28|Santhosh/Satheesh| modified rendering dates in question page
changed the tick to svg in question page
changed tick to answer count in home, your questions, your answers pages

--- a/public/css/questionPage.css
+++ b/public/css/questionPage.css
@@ -11,9 +11,8 @@
   flex-direction: column;
   justify-content: center;
 }
-.tickmark > img {
+.tickmark > svg{
   cursor: pointer;
-  margin-left: 0.6vw;
   margin-bottom: 2vh;
 }
 .vote-container{
