--- a/views/home.pug
+++ b/views/home.pug
@@ -6,6 +6,7 @@ html(lang='en')
     style
       include ../public/css/home.css
     script(src="../js/home.js")
+    script(src="../js/renderingDates.js")
   body(onload=`main(${questions.length})`)
     include titleBar
     include menuBar
