--- a/views/postQuestion.pug
+++ b/views/postQuestion.pug
@@ -11,7 +11,7 @@ html
     script(src="https://cdn.quilljs.com/1.3.6/quill.min.js")
     script(src="/js/editor.js")
     script(src="/js/postQuestion.js")
-  body
+  body(onload="renderEditor()")
     include titleBar
     div(id="container")
       p(class="pageHeading") Post Your Question
