--- a/views/questions.pug
+++ b/views/questions.pug
@@ -8,13 +8,10 @@ div(class="container")
     if(questions.length > 0)
       each question in questions
         div(class="question")
-          -const className=question.anyAnswerAccepted ? "countName-ac" : question.answers > 0? "countName-a":"countName"
+          -const className=question.isAccepted ? "countName-ac" : question.answercount > 0? "countName-a":"countName"
           div(class=`${className}`)
-            div(class="count")=`${question.answers}`
+            div(class="count")=`${question.answercount}`
               div(class="ansCount") answers
-          div(class="ticksymbol hide")
-              -const url=question.isAccepted ? "greentickmark.png" : "tickmark.png"
-              img(src=`/images/${url}`, alt="not found") 
           div
             div(class="title" onClick=`window.location.href='/question/${question.id}'`)=question.title
             div(class="tags")
@@ -22,6 +19,6 @@ div(class="container")
                 div(class="tag")=tag
             div(class='q-author')
               span(class="q-author-name" onclick=`window.location.href='/viewProfile?id=${question.ownerId.slice('1')}'`)=`${question.ownerName}`
-              span(class="date-time" time=`${question.receivedAt}`)
+              span(class="date-time" time=`${question.receivedAt}`) ,&nbsp;
     else 
       p No questions
