--- a/views/answer.pug
+++ b/views/answer.pug
@@ -20,8 +20,8 @@ div(class="answers")
               div(class="avatar-div")
                 img(class="author-avatar" src=`${ownerInfo.avatar}`, alt="alt" onClick=`window.location.href='/viewProfile?id=${ownerInfo.id.slice(1)}'`)
               div
-                div(class="author")=ownerInfo.username
-                div(class="time") one minute ago
+                div(class="author" onclick=`window.location.href='/viewProfile?id=${answer.ownerId.slice(1)}'`)=ownerInfo.username
+                div(class="time" time=`${answer.receivedAt}`)
         div(class="comments a-comments") 
               if(comments.length > 0)
                 span Comments 
@@ -32,10 +32,9 @@ div(class="answers")
                     if(comment.ownerId == `u${userId}`)
                       div(class="edit-btn" onclick=`makeCommentEditable(this,'${comment.id}')`) edit
                       div(class="cancel-btn hide" onclick=`makeCommentUneditable(this,'${comment.id}')`) cancel
-                      div(class="save-btn hide" onclick=`saveComment(this, '${comment.id}')`) save
+                      div(class="save-btn hide" onclick=`postComment(this, '${comment.id}')`) save
                   div(class="c-author")
                     span(onclick=`window.location.href='/viewProfile?id=${comment.ownerId.slice(1)}'`)=comment.username
                     span(class='a-comment-time' time=`${comment.receivedAt}`) ,&nbsp;
-
               include postComment
               +getId(answer.id)
