--- a/views/postQuestion.pug
+++ b/views/postQuestion.pug
@@ -3,7 +3,7 @@ html
     title Inquire
     style
       include ../public/css/home.css
-      include ../public/css/askQuestion.css
+      include ../public/css/postQuestion.css
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/styles/hopscotch.min.css")
     link(rel="stylesheet", href="https://cdn.quilljs.com/1.3.6/quill.snow.css")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/highlight.min.js")
