--- a/public/css/postQuestion.css
+++ b/public/css/postQuestion.css
@@ -55,7 +55,7 @@ label {
   color: rgba(41,41,41,0.7);
 }
 
-input {
+input[name="title"], .tags-list {
   width: 100%;
   height: 6vh;
   font-size: medium;
@@ -72,8 +72,29 @@ input::placeholder{
   font-family: Helvetica, sans-serif;
 }
 
+.tags-list {
+  display: flex;
+  flex-direction: row;
+}
+.tags-list > input {
+  border: none;
+  outline: none;
+  font-size: medium;
+  height: 100%;
+  padding-left: 1%;
+}
 
+.tags {
+  margin-left: 0;
+}
 
+.cross-btn {
+  cursor: pointer;
+  padding: 1px 2px;
+}
+.cross-btn:hover {
+  background-color: #006379;
+}
 #formFooter {
   display: flex;
   flex-direction: row;
