--- a/public/css/home.css
+++ b/public/css/home.css
@@ -243,9 +243,13 @@ body {
   font-weight: 400;
 }
 
+
+.question-details {
+  margin-left: 2vw;
+}
 .title {
   width: 60vw;
-  margin: 0 0 1vh 2vw;
+  margin-bottom: 1vh;
   font-size: 23px;
   font-weight: 400;
 }
@@ -255,55 +259,28 @@ body {
 .tags {
   display: flex;
   flex-direction: row;
-  margin-left: 2vw;
-  margin-top: 2vh;
   list-style: none;
   overflow: hidden;
+  padding: 1vh 0;
 }
 
 .tag {
-  font-size: 14px;
+  font-size: large;
   background: #eee;
   color: hsl(0deg 0% 16% / 80%);
   display: inline-block;
-  padding: 0.5vh 1.5vw 0.5vh;
+  padding: 0.5vh 0.2vw 0.5vh 0.5vh;
   position: relative;
   margin-right: 1vw;
   text-decoration: none;
   -webkit-transition: color 0.2s;
   font-weight: 100;
-}
-
-.tag::before {
-  background: #fff;
-  border-radius: 50%;
-  box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
-  content: '';
-  height: 0.9vh;
-  left: 0.5vw;
-  position: absolute;
-  width: 0.5vw;
-  top: 1vh;
-}
-
-.tag::after {
-  background: #fff;
-  border-bottom: 2vh solid transparent;
-  border-left: 0.7vw solid #eeeeee;
-  border-top: 1.4vh solid transparent;
-  content: '';
-  position: absolute;
-  right: 0;
-  top: 0;
+  align-self: center;
 }
 
 .tag:hover {
   background-color: #00a8cc;
   color: white;
-}
-
-.tag:hover::after {
-  border-left-color: #00a8cc;
 }
 
 .q-author {
