--- a/public/css/postQuestion.css
+++ b/public/css/postQuestion.css
@@ -55,50 +55,71 @@ label {
   color: rgba(41,41,41,0.7);
 }
 
-input[name="title"], .tags-list {
-  width: 100%;
-  height: 6vh;
-  font-size: medium;
-  margin-bottom: 2%;
+input[name="title"], .tags-list, .tag-suggestions {
+  font-size: large;
   margin-top: 1%;
   outline: none;
-  padding-left:1%;
   border: 1px solid #ccc;
+  width: 100%;
+  padding: 1vh 0 1vh 1vh;
 }
 
 input::placeholder{
   opacity: 0.7;
-  font-size: medium;
+  font-size: large;
   font-family: Helvetica, sans-serif;
 }
 
-.tags-list {
+.tags-list {    
   display: flex;
   flex-direction: row;
+  margin-bottom: 0;
+  width: 100%;
+  padding: 0;
 }
 .tags-list > input {
   border: none;
   outline: none;
-  font-size: medium;
+  font-size: large;
   height: 100%;
-  padding-left: 1%;
+  padding: 1vh;
+  align-self: center;
 }
 
 .tags {
-  margin-left: 0;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  overflow: hidden;
+  padding: 1vh 0vh 1vh 1vh;
 }
 
 .cross-btn {
   cursor: pointer;
   padding: 1px 2px;
 }
+
 .cross-btn:hover {
   background-color: #006379;
+}
+
+.tag-suggestions {
+  margin-top: 0;
+  background-color: white;
+  width: 99%;
+  display: flex;
+  flex-wrap: wrap;
+  border-top: none;
+}
+
+.tag-suggestions > .tag {
+  margin: 1vh;
 }
 #formFooter {
   display: flex;
   flex-direction: row;
   width: 80%;
+  margin-top: 2%;
 }
 
 #cancelButton {
